# PCSC

./: .gitmodules  CMakeLists.txt  CSVReaderPolynome.cpp  CSVReaderPolynome.h  Coeff_F1.csv  Makefile  PlotConvergence.cpp  PlotConvergence.h  README.md  bissection.cc  bissection.hh  classic_chord.cc  classic_chord.hh  find_root.cc  find_root.hh  fixed_point.cc  fixed_point.hh  function.cc  function.hh  m_to_n.cc  m_to_n.hh  main.cc  newton.cc  newton.hh  polynomial_1_to_n.cc  polynomial_1_to_n.hh  result_method.cc  result_method.hh  test.cpp
